# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.465.2.106 2008-03-28 11:58:51 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.2.6 (2008/03/31)
 - (2008/03/25) Fixed bug# 2732 - Service name is truncated in dropdown lists
 - (2008/03/21) Fixed bug# 2758 - non-latin filenames in emails get not converted
    to utf8 (e. g. koi8-r, utf8, cp1251).
 - (2008/03/21) Fixed bug# 2781 - Typo in Kernel::System::Ticket::MoveTicket()
   "&" instead of "&&".
 - (2008/03/20) Fixed bug# 2772 - Dangling links to deleted tickets (ticket
    links get not deleted after a ticket got deleted).
 - (2008/03/14) Fixed bug# 2770 - Internal cache mechanism of SLAs delivers
    wrong content.
 - (2008/03/14) Fixed bug# 2769 - Trimming of sla name input field produce
    errors.
 - (2008/03/14) Fixed bug# 954 - ticket split should linking tickets (origin to
    new one).
 - (2008/03/13) Added new turkish translation, thanks to Necmettin Begiter!
 - (2008/03/11) Fixed bug# 2763 - Trimming of service name input field produce
    errors.
 - (2008/03/10) Updated vietnam translation, thanks to Nguyen Nguyet. Phuong!
 - (2008/03/10) Fixed bug# 2757 - Can't download statistic graph if I use
    a diagram as output format.
 - (2008/03/10) Fixed bug# 2717 - All column and row names will be translated
    statistics. Additional fixes for special situations.
 - (2008/03/06) Fixed bug# 2737 - Wrong order of the xaxis in stats output.
 - (2008/03/06) Fixed bug# 2717 - All column and row names will be translated.
 - (2008/03/05) Fixed bug# 2715 - Ascii2Html() is not quoting all links
    correctly.
 - (2008/03/03) Fixed bug# 2742 - Wrong content type in admin package manager
    mask.