@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.465.2.106 2008-03-28 11:58:51 martin Exp $
+# $Id: CHANGES,v 1.465.2.107 2008-04-01 15:03:20 ak Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,9 @@
 # --
 
 2.2.6 (2008/03/31)
+ - (2008/04/01) Fixed bug#2453 - syntax errors on customer search; name@host problems
+    the mail address parser does not recognize the email address if it is not
+    fully 2822 compilant.
  - (2008/03/25) Fixed bug# 2732 - Service name is truncated in dropdown lists
  - (2008/03/21) Fixed bug# 2758 - non-latin filenames in emails get not converted
     to utf8 (e. g. koi8-r, utf8, cp1251).
